Update Gradle wrapper to 8.13 and adapt custom test report API (#1336)
* Update wrapper to 8.13 and adapt custom test report API

* Trim test names

* Fix eclipse version numbers in github action

* Run linux builds in the context of xvfb

* Document expecation on eclipse version calculation

* Remove hamcrest from plugin classpath